feat: Altera forma de acesso da imagem da logo no PDF Service para exibição durante execução do pacote .WAR